# IronQuill

./: CMakeLists.txt  example.txt  information.txt
src/: IronQuill.cpp  IronQuill.h  main.cpp
